tests/reference/asr-iostat_constant_integer-4f6f5d4.stderr
semantic error: Non-variable expression for `iostat`
 --> tests/errors/iostat_constant_integer.f90:7:5
  |
7 |     read(buffer, *, iostat=ios)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
